--- a/source/index.html
+++ b/source/index.html
@@ -2,11 +2,137 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
+    <title>HTML Academy: Кэт энерджи | Главная</title>
   </head>
   <body>
+    <header class="page-header">
+      <div class="wrapper">
+        <div class="page-header__content">
+          <a class="page-logo page-header__logo">
+            <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page-header__logo-image" alt="logotype">
+          </a>
+          <span class="page-title page-header__title">
+            <b>Cat</b> Energy
+          </span>
+          <nav class="main-nav">
+            <button class="main-nav__toggle" type="button">| | |</button>
+            <ul class="main-nav__list visually-hidden">
+              <li class="main-nav__item">
+                <a>Главная</a>
+              </li>
+              <li class="main-nav__item">
+                <a href="catalog.html">Каталог</a>
+              </li>
+              <li class="main-nav__item">
+                <a href="form.html">Форма</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+    <main class="page-main">
+      <section class="banner">
+        <div class="wrapper">
+          <div class="banner__content">
+            <h1>Функциональное питание для котов</h1>
+            <span class="banner__title">Занялся собой? Займись котом!</span>
+            <img class="banner__image" src="https://via.placeholder.com/150x150" width="280" height="270" alt="Banner image">
+          </div>
+        </div>
+      </section>
+      <section class="program">
+        <div class="wrapper">
+          <div class="program__content">
+            <button class="button program__button">Подобрать программу</button>
+            <ul class="program__list">
+              <li class="program-item program-item-slim">
+                <img class="program-item__image" src="https://via.placeholder.com/150x150" width="50" height="50" alt="Cat image">
+                <span class="program-item__title">Похудение</span>
+                <span class="program-item__description">
+                  Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+                  Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+                </span>
+                <a href="#" class="program-item__link">Каталог Slim</a>
+              </li>
+              <li class="program-item program-item-mass">
+                <img class="program-item__image" src="https://via.placeholder.com/150x150" width="50" height="50" alt="Panther image">
+                <span class="program-item__title">Набор массы</span>
+                <span class="program-item__description">
+                  Заработать авторитет среди дворовых котов и даже собак?
+                  Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+                </span>
+                <a href="#" class="program-item__link">Каталог Pro</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="advantages">
+        <div class="wrapper">
+          <div class="advantages__content">
+            <h2>Как это работает</h2>
+            <ul class="advantages__list">
+              <li class="advantage">
+                <img class="advantage__image" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Leaf image">
+                <span class="advantage__description">
+                  Функциональное питание содержит только полезные питательные вещества.
+                </span>
+              </li>
+              <li class="advantage">
+                <img class="advantage__image" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Dust image">
+                <span class="advantage__description">
+                  Выпускается в виде порошка, который нужно лишь залить кипятком
+                </span>
+              </li>
+              <li class="advantage">
+                <img class="advantage__image" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Meal image">
+                <span class="advantage__description">
+                  Замените один-два приема обычной еды на наше функциональное питание.
+                </span>
+              </li>
+              <li class="advantage">
+                <img class="advantage__image" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Watch image">
+                <span class="advantage__description">
+                  Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+                </span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
 
+    <footer class="page-footer">
+      <div class="wrapper">
+        <div class="footer__content">
+          <span class="page-title page-footer__title">
+            <b>Cat</b> Energy
+          </span>
+          <ul class="social__list social__list-footer">
+            <li class="social__item social__item-vk">
+              <a href="https://vk.com/htmlacademy">
+                <img src="https://via.placeholder.com/150x150" width="16" height="16" alt="VK">
+              </a>
+            </li>
+            <li class="social__item social__item-insta">
+              <a href="https://www.instagram.com/htmlacademy">
+                <img src="https://via.placeholder.com/150x150" width="16" height="16" alt="Instagram">
+              </a>
+            </li>
+            <li class="social__item social__item-fb">
+              <a href="https://ru-ru.facebook.com/htmlacademy">
+                <img src="https://via.placeholder.com/150x150" width="16" height="16" alt="Facebook">
+              </a>
+            </li>
+          </ul>
+          <div class="copyright">
+            <span class="copyright__text">HTML Academy</span>
+            <img src="https://via.placeholder.com/150x150" class="copyright__image" width="27" height="34" alt="Academy">
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
