Добавляет правки в текущую разметку

--- a/source/form.html
+++ b/source/form.html
@@ -5,16 +5,13 @@
     <title>HTML Academy: Кэт энерджи | Подбор программы</title>
   </head>
   <body class="page">
-    <header class="page-header header">
-      <div class="page-header__content">
-        <a class="page-logo page-header__logo">
-          <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page-header__logo-image" alt="logotype">
+    <header class="page__header header">
+      <div class="header__content">
+        <a href="index.html" class="page__logo header__logo">
+          <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page__logo-image header__logo-image" alt="Cat Energy">
         </a>
-        <span class="page-title page-title__header">
-          <b>Cat</b> Energy
-        </span>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">| | |</button>
+          <button class="main-nav__toggle" type="button">Мобильное меню</button>
           <ul class="main-nav__list visually-hidden">
             <li class="main-nav__item">
               <a href="index.html">Главная</a>
@@ -30,9 +27,9 @@
       </div>
     </header>
 
-    <footer class="page-footer footer">
+    <footer class="page__footer footer">
       <div class="footer__content">
-        <span class="page-title page-title__footer">
+        <span class="page__title footer__title">
           <b>Cat</b> Energy
         </span>
         <ul class="social">
@@ -43,7 +40,7 @@
           </li>
           <li class="social__item">
             <a href="https://www.instagram.com/htmlacademy" class="social__link">
-              <img src="https://via.placeholder.com/150x150" class="social__image social__image-instagram" width="16" height="16" alt="Instagram">
+              <img src="https://via.placeholder.com/150x150" class="social__image social__image-ig" width="16" height="16" alt="Instagram">
             </a>
           </li>
           <li class="social__item">
@@ -52,7 +49,7 @@
             </a>
           </li>
         </ul>
-        <a class="copyright">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright">
           <span class="copyright__text">HTML Academy</span>
           <img src="https://via.placeholder.com/150x150" class="copyright__image" width="27" height="34" alt="Academy">
         </a>
