--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,16 +5,13 @@
     <title>HTML Academy: Кэт энерджи | Каталог</title>
   </head>
   <body class="page">
-    <header class="page-header header">
-      <div class="page-header__content">
-        <a class="page-logo page-header__logo">
-          <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page-header__logo-image" alt="logotype">
+    <header class="page__header header">
+      <div class="header__content">
+        <a href="index.html" class="page__logo header__logo">
+          <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page__logo-image header__logo-image" alt="Cat Energy">
         </a>
-        <span class="page-title page-title__header">
-          <b>Cat</b> Energy
-        </span>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">| | |</button>
+          <button class="main-nav__toggle" type="button">Открыть меню</button>
           <ul class="main-nav__list visually-hidden">
             <li class="main-nav__item">
               <a href="index.html">Главная</a>
@@ -30,16 +27,16 @@
       </div>
     </header>
 
-    <main class="page-main">
+    <main class="page__main">
       <section class="catalog">
         <div class="catalog__content">
           <h1>Каталог продукции</h1>
           <ul class="catalog__list">
             <li class="catalog__item">
               <img src="https://via.placeholder.com/150x150" alt="Item-1" class="catalog__image" width="140" height="144" >
-              <span class="catalog__title">
-                  Cat Energy <br> PRO 500 г
-              </span>
+              <h3 class="catalog__title">
+                  Cat Energy PRO 500 г
+              </h3>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -58,9 +55,9 @@
             </li>
             <li class="catalog__item">
               <img src="https://via.placeholder.com/150x150" alt="Item-2" class="catalog__image" width="140" height="144" >
-              <span class="catalog__title">
-                  Cat Energy <br> PRO 1000 г
-              </span>
+              <h3 class="catalog__title">
+                  Cat Energy PRO 1000 г
+              </h3>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -79,9 +76,9 @@
             </li>
             <li class="catalog__item">
               <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144" >
-              <span class="catalog__title">
-                  Cat Energy <br> PRO 500 г
-              </span>
+              <h3 class="catalog__title">
+                  Cat Energy PRO 500 г
+              </h3>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -100,9 +97,9 @@
             </li>
             <li class="catalog__item">
               <img src="https://via.placeholder.com/150x150" alt="Item-4" class="catalog__image" width="140" height="144" >
-              <span class="catalog__title">
-                  Cat Energy <br> PRO 1000 г
-              </span>
+              <h3 class="catalog__title">
+                  Cat Energy PRO 1000 г
+              </h3>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -121,9 +118,9 @@
             </li>
             <li class="catalog__item">
               <img src="https://via.placeholder.com/150x150" alt="Item-5" class="catalog__image" width="140" height="144" >
-              <span class="catalog__title">
-                  Cat Energy <br> Slim 1000 г
-              </span>
+              <h3 class="catalog__title">
+                  Cat Energy Slim 1000 г
+              </h3>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -142,9 +139,9 @@
             </li>
             <li class="catalog__item">
               <img src="https://via.placeholder.com/150x150" alt="Item-6" class="catalog__image" width="140" height="144" >
-              <span class="catalog__title">
-                  Cat Energy <br> Slim 1000 г
-              </span>
+              <h3 class="catalog__title">
+                  Cat Energy Slim 1000 г
+              </h3>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -163,9 +160,9 @@
             </li>
             <li class="catalog__item">
               <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144">
-              <span class="catalog__title">
-                  Cat Energy <br> Slim 500 г
-              </span>
+              <h3 class="catalog__title">
+                  Cat Energy Slim 500 г
+              </h3>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -184,18 +181,17 @@
             </li>
           </ul>
           <div class="show-more">
-            <img src="https://via.placeholder.com/150x150" alt="Show more" class="show-more__image" width="30" height="30">
-            <span class="show-more__title">Показать еще 100500 товаров</span>
-            <span class="show-more__description">На самом деле вкусов гораздо больше!</span>
-            <button class="button button--grey show-more__button" type="button">Показать все</button>
+            <button class="show-more__button">Показать еще 100500 товаров</button>
+            <p class="show-more__description">На самом деле вкусов гораздо больше!</p>
+            <button class="show-more__button" type="button">Показать все</button>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="page-footer footer">
+    <footer class="page__footer footer">
       <div class="footer__content">
-        <span class="page-title page-title__footer">
+        <span class="page__title footer__title">
           <b>Cat</b> Energy
         </span>
         <ul class="social">
@@ -206,7 +202,7 @@
           </li>
           <li class="social__item">
             <a href="https://www.instagram.com/htmlacademy" class="social__link">
-              <img src="https://via.placeholder.com/150x150" class="social__image social__image-instagram" width="16" height="16" alt="Instagram">
+              <img src="https://via.placeholder.com/150x150" class="social__image social__image-ig" width="16" height="16" alt="Instagram">
             </a>
           </li>
           <li class="social__item">
@@ -215,7 +211,7 @@
             </a>
           </li>
         </ul>
-        <a class="copyright">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright">
           <span class="copyright__text">HTML Academy</span>
           <img src="https://via.placeholder.com/150x150" class="copyright__image" width="27" height="34" alt="Academy">
         </a>
