--- a/source/index.html
+++ b/source/index.html
@@ -5,16 +5,13 @@
     <title>HTML Academy: Кэт энерджи | Главная</title>
   </head>
   <body class="page">
-    <header class="page-header header">
-      <div class="page-header__content">
-        <a class="page-logo page-header__logo">
-          <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page-header__logo-image" alt="logotype">
+    <header class="page__header header">
+      <div class="header__content">
+        <a class="page__logo header__logo">
+          <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page__logo-image header__logo-image" alt="Cat Energy">
         </a>
-        <span class="page-title page-title__header">
-          <b>Cat</b> Energy
-        </span>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">| | |</button>
+          <button class="main-nav__toggle" type="button">Мобильное меню</button>
           <ul class="main-nav__list visually-hidden">
             <li class="main-nav__item">
               <a>Главная</a>
@@ -29,7 +26,7 @@
         </nav>
       </div>
     </header>
-    <main class="page-content content">
+    <main class="page__content">
       <section class="banner">
         <div class="banner__content">
           <h1>Функциональное питание для котов</h1>
@@ -39,7 +36,7 @@
       </section>
       <section class="program">
         <div class="program__content">
-          <button class="button program__button">Подобрать программу</button>
+          <a href="form.html" class="program__to-form">Подобрать программу</a>
           <ul class="program__list">
             <li class="program__item">
               <img class="program__image program__image--slim" src="https://via.placeholder.com/150x150" width="50" height="50" alt="Cat image">
@@ -48,7 +45,7 @@
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
                 Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
               </span>
-              <a href="#" class="program__link">Каталог Slim</a>
+              <a href="catalog.html" class="program__link">Каталог Slim</a>
             </li>
             <li class="program__item">
               <img class="program__image program__image--mass" src="https://via.placeholder.com/150x150" width="50" height="50" alt="Panther image">
@@ -57,7 +54,7 @@
                 Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </span>
-              <a href="#" class="program__link">Каталог Pro</a>
+              <a href="catalog.html" class="program__link">Каталог Pro</a>
             </li>
           </ul>
         </div>
@@ -67,36 +64,24 @@
           <h2>Как это работает</h2>
           <ul class="advantages__list">
             <li class="advantage">
-              <img class="advantage__image" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Leaf image">
-              <span class="advantage__description">
-                Функциональное питание содержит только полезные питательные вещества.
-              </span>
+              Функциональное питание содержит только полезные питательные вещества.
             </li>
             <li class="advantage">
-              <img class="advantage__image" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Dust image">
-              <span class="advantage__description">
-                Выпускается в виде порошка, который нужно лишь залить кипятком
-              </span>
+              Выпускается в виде порошка, который нужно лишь залить кипятком
             </li>
             <li class="advantage">
-              <img class="advantage__image" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Meal image">
-              <span class="advantage__description">
-                Замените один-два приема обычной еды на наше функциональное питание.
-              </span>
+              Замените один-два приема обычной еды на наше функциональное питание.
             </li>
             <li class="advantage">
-              <img class="advantage__image" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Watch image">
-              <span class="advantage__description">
-                Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-              </span>
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="page-footer footer">
+    <footer class="page__footer footer">
       <div class="footer__content">
-        <span class="page-title page-title__footer">
+        <span class="page__title footer__title">
           <b>Cat</b> Energy
         </span>
         <ul class="social">
@@ -107,7 +92,7 @@
           </li>
           <li class="social__item">
             <a href="https://www.instagram.com/htmlacademy" class="social__link">
-              <img src="https://via.placeholder.com/150x150" class="social__image social__image-instagram" width="16" height="16" alt="Instagram">
+              <img src="https://via.placeholder.com/150x150" class="social__image social__image-ig" width="16" height="16" alt="Instagram">
             </a>
           </li>
           <li class="social__item">
@@ -116,7 +101,7 @@
             </a>
           </li>
         </ul>
-        <a class="copyright">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright">
           <span class="copyright__text">HTML Academy</span>
           <img src="https://via.placeholder.com/150x150" class="copyright__image" width="27" height="34" alt="Academy">
         </a>
