Вносит дополнительные правки в разметку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,13 +11,13 @@
           <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page__logo-image header__logo-image" alt="Cat Energy">
         </a>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Открыть меню</button>
+          <button class="main-nav__toggle" type="button">Показать навигацию</button>
           <ul class="main-nav__list visually-hidden">
             <li class="main-nav__item">
-              <a href="index.html">Главная</a>
+              <a href="index.html" class="main-nav__link">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link">Каталог</a>
+              <a class="main-nav__link main-nav__link--active">Каталог</a>
             </li>
             <li class="main-nav__item">
               <a href="form.html" class="main-nav__link">Форма</a>
@@ -33,10 +33,12 @@
           <h1>Каталог продукции</h1>
           <ul class="catalog__list">
             <li class="catalog__item">
-              <img src="https://via.placeholder.com/150x150" alt="Item-1" class="catalog__image" width="140" height="144" >
-              <h3 class="catalog__title">
-                  Cat Energy PRO 500 г
-              </h3>
+              <a href="#">
+                <img src="https://via.placeholder.com/150x150" alt="Item-1" class="catalog__image" width="140" height="144" >
+                <h3 class="catalog__title">
+                    Cat Energy PRO 500 г
+                </h3>
+              </a>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -51,13 +53,15 @@
                   <td class="catalog__value">700 Р</td>
                 </tr>
               </table>
-              <button class="button catalog__button" type="button">Заказать</button>
+              <a class="button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <img src="https://via.placeholder.com/150x150" alt="Item-2" class="catalog__image" width="140" height="144" >
-              <h3 class="catalog__title">
-                  Cat Energy PRO 1000 г
-              </h3>
+              <a href="#">
+                <img src="https://via.placeholder.com/150x150" alt="Item-2" class="catalog__image" width="140" height="144" >
+                <h3 class="catalog__title">
+                    Cat Energy PRO 1000 г
+                </h3>
+              </a>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -72,13 +76,15 @@
                   <td class="catalog__value">1000 Р</td>
                 </tr>
               </table>
-              <button class="button catalog__button" type="button">Заказать</button>
+              <a class="button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144" >
-              <h3 class="catalog__title">
-                  Cat Energy PRO 500 г
-              </h3>
+              <a href="#">
+                <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144" >
+                <h3 class="catalog__title">
+                    Cat Energy PRO 500 г
+                </h3>
+              </a>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -93,13 +99,15 @@
                   <td class="catalog__value">700 Р</td>
                 </tr>
               </table>
-              <button class="button catalog__button" type="button">Заказать</button>
+              <a class="button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <img src="https://via.placeholder.com/150x150" alt="Item-4" class="catalog__image" width="140" height="144" >
-              <h3 class="catalog__title">
-                  Cat Energy PRO 1000 г
-              </h3>
+              <a href="#">
+                <img src="https://via.placeholder.com/150x150" alt="Item-4" class="catalog__image" width="140" height="144" >
+                <h3 class="catalog__title">
+                    Cat Energy PRO 1000 г
+                </h3>
+              </a>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -114,13 +122,15 @@
                   <td class="catalog__value">1000 Р</td>
                 </tr>
               </table>
-              <button class="button catalog__button" type="button">Заказать</button>
+              <a class="button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <img src="https://via.placeholder.com/150x150" alt="Item-5" class="catalog__image" width="140" height="144" >
-              <h3 class="catalog__title">
-                  Cat Energy Slim 1000 г
-              </h3>
+              <a href="#">
+                <img src="https://via.placeholder.com/150x150" alt="Item-5" class="catalog__image" width="140" height="144" >
+                <h3 class="catalog__title">
+                    Cat Energy Slim 1000 г
+                </h3>
+              </a>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -135,13 +145,15 @@
                   <td class="catalog__value">400 Р</td>
                 </tr>
               </table>
-              <button class="button catalog__button" type="button">Заказать</button>
+              <a class="button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <img src="https://via.placeholder.com/150x150" alt="Item-6" class="catalog__image" width="140" height="144" >
-              <h3 class="catalog__title">
-                  Cat Energy Slim 1000 г
-              </h3>
+              <a href="#">
+                <img src="https://via.placeholder.com/150x150" alt="Item-6" class="catalog__image" width="140" height="144" >
+                <h3 class="catalog__title">
+                    Cat Energy Slim 1000 г
+                </h3>
+              </a>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -156,13 +168,15 @@
                   <td class="catalog__value">700 Р</td>
                 </tr>
               </table>
-              <button class="button catalog__button" type="button">Заказать</button>
+              <a class="button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144">
-              <h3 class="catalog__title">
-                  Cat Energy Slim 500 г
-              </h3>
+              <a href="#">
+                <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144">
+                <h3 class="catalog__title">
+                    Cat Energy Slim 500 г
+                </h3>
+              </a>
               <table class="catalog__list">
                 <tr>
                   <td class="catalog__option">Объем</td>
@@ -177,13 +191,13 @@
                   <td class="catalog__value">500 Р</td>
                 </tr>
               </table>
-              <button class="button catalog__button" type="button">Заказать</button>
+              <a class="button" href="#">Заказать</a>
             </li>
           </ul>
           <div class="show-more">
             <button class="show-more__button">Показать еще 100500 товаров</button>
             <p class="show-more__description">На самом деле вкусов гораздо больше!</p>
-            <button class="show-more__button" type="button">Показать все</button>
+            <a href="#" class="show-more__link">Показать все</a>
           </div>
         </div>
       </section>
@@ -191,9 +205,6 @@
 
     <footer class="page__footer footer">
       <div class="footer__content">
-        <span class="page__title footer__title">
-          <b>Cat</b> Energy
-        </span>
         <ul class="social">
           <li class="social__item">
             <a href="https://vk.com/htmlacademy" class="social__link">
