--- a/source/form.html
+++ b/source/form.html
@@ -11,16 +11,16 @@
           <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page__logo-image header__logo-image" alt="Cat Energy">
         </a>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Мобильное меню</button>
+          <button class="main-nav__toggle" type="button">Показать навигацию</button>
           <ul class="main-nav__list visually-hidden">
             <li class="main-nav__item">
-              <a href="index.html">Главная</a>
+              <a href="index.html" class="main-nav__link">Главная</a>
             </li>
             <li class="main-nav__item">
               <a href="catalog.html" class="main-nav__link">Каталог</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link">Форма</a>
+              <a class="main-nav__link main-nav__link--active">Форма</a>
             </li>
           </ul>
         </nav>
@@ -29,9 +29,6 @@
 
     <footer class="page__footer footer">
       <div class="footer__content">
-        <span class="page__title footer__title">
-          <b>Cat</b> Energy
-        </span>
         <ul class="social">
           <li class="social__item">
             <a href="https://vk.com/htmlacademy" class="social__link">
