--- a/source/index.html
+++ b/source/index.html
@@ -11,10 +11,10 @@
           <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page__logo-image header__logo-image" alt="Cat Energy">
         </a>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Мобильное меню</button>
+          <button class="main-nav__toggle" type="button">Показать навигацию</button>
           <ul class="main-nav__list visually-hidden">
             <li class="main-nav__item">
-              <a>Главная</a>
+              <a class="main-nav__link main-nav__link--active">Главная</a>
             </li>
             <li class="main-nav__item">
               <a href="catalog.html" class="main-nav__link">Каталог</a>
@@ -30,7 +30,7 @@
       <section class="banner">
         <div class="banner__content">
           <h1>Функциональное питание для котов</h1>
-          <span class="banner__title">Занялся собой? Займись котом!</span>
+          <p class="banner__title">Занялся собой? Займись котом!</p>
           <img class="banner__image" src="https://via.placeholder.com/150x150" width="280" height="270" alt="Banner image">
         </div>
       </section>
@@ -40,20 +40,20 @@
           <ul class="program__list">
             <li class="program__item">
               <img class="program__image program__image--slim" src="https://via.placeholder.com/150x150" width="50" height="50" alt="Cat image">
-              <span class="program__title">Похудение</span>
-              <span class="program__description">
+              <h3 class="program__title">Похудение</h3>
+              <p class="program__description">
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
                 Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-              </span>
+              </p>
               <a href="catalog.html" class="program__link">Каталог Slim</a>
             </li>
             <li class="program__item">
               <img class="program__image program__image--mass" src="https://via.placeholder.com/150x150" width="50" height="50" alt="Panther image">
-              <span class="program__title">Набор массы</span>
-              <span class="program__description">
+              <h3 class="program__title">Набор массы</h3>
+              <p class="program__description">
                 Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-              </span>
+              </p>
               <a href="catalog.html" class="program__link">Каталог Pro</a>
             </li>
           </ul>
@@ -81,9 +81,6 @@
     </main>
     <footer class="page__footer footer">
       <div class="footer__content">
-        <span class="page__title footer__title">
-          <b>Cat</b> Energy
-        </span>
         <ul class="social">
           <li class="social__item">
             <a href="https://vk.com/htmlacademy" class="social__link">
