Добавляет БЭМ-классы и улучшает разметку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,7 +33,7 @@
           <h1>Каталог продукции</h1>
           <ul class="catalog__list">
             <li class="catalog__item">
-              <a href="#">
+              <a href="#" class="catalog__link">
                 <img src="https://via.placeholder.com/150x150" alt="Item-1" class="catalog__image" width="140" height="144" >
                 <h3 class="catalog__title">
                     Cat Energy PRO 500 г
@@ -53,10 +53,10 @@
                   <td class="catalog__value">700 Р</td>
                 </tr>
               </table>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__order" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <a href="#" class="catalog__link">
                 <img src="https://via.placeholder.com/150x150" alt="Item-2" class="catalog__image" width="140" height="144" >
                 <h3 class="catalog__title">
                     Cat Energy PRO 1000 г
@@ -76,10 +76,10 @@
                   <td class="catalog__value">1000 Р</td>
                 </tr>
               </table>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__order" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <a href="#" class="catalog__link">
                 <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144" >
                 <h3 class="catalog__title">
                     Cat Energy PRO 500 г
@@ -99,10 +99,10 @@
                   <td class="catalog__value">700 Р</td>
                 </tr>
               </table>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__order" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <a href="#" class="catalog__link">
                 <img src="https://via.placeholder.com/150x150" alt="Item-4" class="catalog__image" width="140" height="144" >
                 <h3 class="catalog__title">
                     Cat Energy PRO 1000 г
@@ -122,10 +122,10 @@
                   <td class="catalog__value">1000 Р</td>
                 </tr>
               </table>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__order" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <a href="#" class="catalog__link">
                 <img src="https://via.placeholder.com/150x150" alt="Item-5" class="catalog__image" width="140" height="144" >
                 <h3 class="catalog__title">
                     Cat Energy Slim 1000 г
@@ -145,10 +145,10 @@
                   <td class="catalog__value">400 Р</td>
                 </tr>
               </table>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__order" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <a href="#" class="catalog__link">
                 <img src="https://via.placeholder.com/150x150" alt="Item-6" class="catalog__image" width="140" height="144" >
                 <h3 class="catalog__title">
                     Cat Energy Slim 1000 г
@@ -168,10 +168,10 @@
                   <td class="catalog__value">700 Р</td>
                 </tr>
               </table>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__order" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <a href="#" class="catalog__link">
                 <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144">
                 <h3 class="catalog__title">
                     Cat Energy Slim 500 г
@@ -191,13 +191,13 @@
                   <td class="catalog__value">500 Р</td>
                 </tr>
               </table>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__order" href="#">Заказать</a>
             </li>
           </ul>
           <div class="show-more">
-            <button class="show-more__button">Показать еще 100500 товаров</button>
+            <a href="#" class="show-more__button">Показать еще 100500 товаров</a>
             <p class="show-more__description">На самом деле вкусов гораздо больше!</p>
-            <a href="#" class="show-more__link">Показать все</a>
+            <a href="#" class="button show-more__to-all">Показать все</a>
           </div>
         </div>
       </section>
