--- a/source/form.html
+++ b/source/form.html
@@ -2,16 +2,57 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи | Подбор программы</title>
+    <title>HTML Academy: Кэт энерджи | Форма</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page">
     <header class="page__header header">
       <div class="header__content">
-        <a href="index.html" class="page__logo header__logo">
-          <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page__logo-image header__logo-image" alt="Cat Energy">
+        <a class="page__logo header__logo">
+          <svg xmlns="http://www.w3.org/2000/svg" alt="Cat Energy" version="1.1" id="Layer_2" x="0px" y="0px" width="192" viewBox="0 0.002 190.4 37.598" style="enable-background:new 0 0 33.3 37.6;">
+            <style type="text/css">
+              .st0 {
+                fill: #FDC305;
+              }
+              .st1 {
+                fill: #F06351;
+              }
+            </style>
+            <g>
+              <path class="st0" d="M6.1,20.7l0.1-2.3c6.7-0.9,13.4-1.4,20.2-1.3c0,0.6,0,1.2-0.1,1.8c0,0,2.9-1.3,6-1.8&#10;    c-2.4-6.3-8.5-10.8-15.6-10.8c-8.3,0-15.2,6.1-16.5,14.1C2.4,20.5,6.1,20.7,6.1,20.7z"/>
+              <path class="st0" d="M27.2,24.2c-1.2,1.3-1.4,1.2-1.4,3.5c0,0.9,0,4.9,0,9.2c4.5-3,7.4-8.1,7.4-13.9c0-1.1-0.1-2.1-0.3-3.1&#10;    C31.2,21,28.2,23.1,27.2,24.2z"/>
+              <path class="st0" d="M6.4,25.7c0,0-3.8-1.4-5.2-1.8c-0.4-0.1-0.8-0.2-1.2-0.3c0.2,6,3.7,11.3,8.7,14L6.4,25.7z"/>
+            </g>
+            <path class="st1" d="M26.3,17.1c0.1-8.5-1.4-16.5-1.4-16.5S24.7-0.6,24,0.4c-0.7,1.1-1.2,3.9-1.2,3.9c-7.4-0.4-12.8,0.3-12.8,0.3&#10;  C9.2,2,7.9,0.8,7.2,1C6.5,1.3,6.5,4.4,6.5,4.4L6.1,18.5C12.8,17.5,19.6,17.1,26.3,17.1z"/>
+            <path d="M12.4,14c0-0.1,1,0.7,1.4,0.9c0.4,0.2,0.6,0.4,0.6,0.6c0,0.2-0.3,0.3-0.6,0.3s-0.9-0.1-1-0.3c0,0,0.6,0,0.9,0h0.3&#10;  C14.1,15.6,12.7,14.5,12.4,14z"/>
+            <path d="M19.9,14.1c0,0-1,1.3-1.1,1.3c0,0.1-0.2,0.3,0.2,0.3s1.1-0.2,1.2-0.3c0.1-0.1,0.1-0.2-0.1-0.2c-0.2,0-0.7,0-1,0.1L19.9,14.1&#10;  C19.9,14.1,20,14,19.9,14.1z"/>
+            <path d="M16.8,20.2c0,0,0.8-0.4,1.1-1c0.3-0.7,0-0.9-0.4-1c-0.5-0.1-1.3,0-1.7,0.3c-0.4,0.4-0.3,0.7-0.1,1&#10;  C15.9,19.7,16.5,20.1,16.8,20.2z"/>
+            <path class="st1" d="M16.3,21.5c0,0-0.2,0.4-0.5,0.6c-0.2,0.2-0.6,0.4-1,0.4c-0.6,0-1.1-0.2-1.5-0.4c-0.2-0.1-0.4-0.3-0.5-0.4&#10;  c-0.2-0.2-0.4-0.3-0.4-0.3s0.7,4.1,2.6,4.7c1.8,0.6,2.1-0.7,2.2-1.1c0-0.3,0-2.1-0.8-3.2C16.5,21.4,16.4,21.6,16.3,21.5z"/>
+            <g>
+              <path d="M14.7,22.6C14.7,22.6,14.7,22.6,14.7,22.6c-1.3,0-2.3-1.4-2.3-1.4c0-0.1,0-0.2,0-0.2c0.1,0,0.2,0,0.2,0c0,0,1,1.3,2.1,1.3&#10;    c0,0,0,0,0,0c0.6,0,1.1-0.3,1.6-1l0.1-0.2l0.1,0.2c0,0,0.4,0.8,1,0.8c0.5,0,1.1-0.4,1.6-1.3c0-0.1,0.1-0.1,0.2,0&#10;    c0.1,0,0.1,0.1,0,0.2c-0.6,1-1.3,1.4-1.9,1.4c-0.6,0-0.9-0.5-1.1-0.8C15.9,22.3,15.3,22.6,14.7,22.6z"/>
+            </g>
+            <path class="st1" d="M26.2,18.9c0,0-2.5,2.2-5.1,5.2S15.9,29,15.9,29c-0.2-0.5-1.6-1.5-1.6-1.5s-3.1-2.1-5.2-3.8&#10;  c-1.2-1-2.3-2.2-3.1-3c-0.3,0-1.1-0.1-2-0.1c4.7,7,12,8.8,12,8.8c0.9-0.1,3.3-1.9,5.1-3.3c1.8-1.4,4.8-4.5,5.9-5.9&#10;  c0.6-0.7,0.9-1.4,1.1-2C27,18.6,26.2,18.9,26.2,18.9z"/>
+            <g transform="matrix(1, 0, 0, 1, 90, 10.200001)">
+              <path class="st0" d="M1.2,16.6c-0.8-1-1.2-2.5-1.2-4.4V5.9c0-1.9,0.4-3.4,1.2-4.4C2,0.5,3.4,0,5.4,0c1.9,0,3.2,0.4,4,1.3&#10;    c0.8,0.9,1.2,2.1,1.2,3.8v1.5H6.6V4.8c0-0.7-0.1-1.2-0.2-1.6C6.3,2.9,5.9,2.7,5.4,2.7S4.4,2.9,4.3,3.3C4.1,3.7,4,4.2,4,4.9v8.3&#10;    c0,0.7,0.1,1.2,0.3,1.6c0.2,0.4,0.5,0.6,1.1,0.6c0.5,0,0.9-0.2,1-0.6c0.2-0.4,0.2-0.9,0.2-1.6v-1.8h3.9v1.5c0,1.6-0.4,2.9-1.2,3.9&#10;    c-0.8,0.9-2.1,1.4-4,1.4C3.4,18.1,2,17.6,1.2,16.6z" style="fill: rgb(17, 17, 17);"/>
+              <path class="st0" d="M15.2,0.2h4.5L23,17.8h-3.6l-0.6-3.7h-2.6l-0.6,3.7h-3.7L15.2,0.2z M18.4,11.8l-0.9-6.9l-0.9,6.9H18.4z" style="fill: rgb(17, 17, 17);"/>
+              <path class="st0" d="M25.8,3.1h-2.7V0.2h9.3v2.9h-2.7v14.7h-4V3.1z" style="fill: rgb(17, 17, 17);"/>
+              <path class="st0" d="M39.5,0.2h6.9v1.8H42v5.8h3.6v1.7H42v6.4h4.5v1.8h-7V0.2z" style="fill: rgb(17, 17, 17);"/>
+              <path class="st0" d="M48.5,0.2h1.7l5.1,11.7V0.2h2.1v17.6h-1.6l-5.1-12v12h-2.1V0.2z" style="fill: rgb(17, 17, 17);"/>
+              <path class="st0" d="M59.8,0.2h6.9v1.8h-4.4v5.8h3.6v1.7h-3.6v6.4h4.5v1.8h-7V0.2z" style="fill: rgb(17, 17, 17);"/>
+              <path class="st0" d="M68.8,0.2h3.6c1.8,0,3.1,0.4,4,1.1s1.3,1.9,1.3,3.6c0,2.3-0.7,3.6-2.2,4.1l2.5,8.8h-2.4l-2.3-8.3h-1.9v8.3&#10;    h-2.5V0.2z M72.2,7.8c1.1,0,1.8-0.2,2.3-0.6C75,6.8,75.2,6,75.2,4.9c0-0.7-0.1-1.3-0.2-1.7s-0.4-0.7-0.9-0.9&#10;    c-0.4-0.2-1-0.3-1.7-0.3h-1.1v5.8H72.2z" style="fill: rgb(17, 17, 17);"/>
+              <path class="st0" d="M80.8,16.5c-0.7-1-1.1-2.5-1.1-4.5V6.2c0-1.4,0.1-2.5,0.4-3.4c0.3-0.9,0.8-1.5,1.5-2c0.7-0.5,1.7-0.7,2.9-0.7&#10;    c1.6,0,2.8,0.4,3.6,1.2c0.7,0.8,1.1,2.1,1.1,3.9v0.7h-2.3V5.3c0-0.8-0.1-1.5-0.2-1.9c-0.1-0.5-0.3-0.8-0.7-1&#10;    C85.7,2.1,85.2,2,84.6,2c-0.7,0-1.2,0.2-1.5,0.5c-0.3,0.3-0.6,0.7-0.7,1.2c-0.1,0.5-0.1,1.2-0.1,2.1v6.5c0,1.3,0.2,2.3,0.5,2.9&#10;    c0.3,0.6,1,0.9,1.9,0.9c0.9,0,1.6-0.3,1.9-1c0.3-0.6,0.5-1.7,0.5-3.1v-1.2h-2.3V9.1h4.5v8.7h-1.6l-0.2-2c-0.6,1.5-1.6,2.2-3.2,2.2&#10;    C82.7,18,81.5,17.5,80.8,16.5z" style="fill: rgb(17, 17, 17);"/>
+              <path class="st0" d="M94.3,11.6L90.4,0.2h2.3l2.7,8.5l2.7-8.5h2.3l-3.8,11.4v6.2h-2.4V11.6z" style="fill: rgb(17, 17, 17);"/>
+            </g>
+          </svg>
         </a>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Показать навигацию</button>
+          <button class="main-nav__toggle" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 24 18" style="enable-background:new 0 0 24 18;" xml:space="preserve">
+              <rect y="16" width="24" height="2"/>
+              <rect y="8" width="24" height="2"/>
+              <rect width="24" height="2"/>
+            </svg>
+          </button>
           <ul class="main-nav__list visually-hidden">
             <li class="main-nav__item">
               <a href="index.html" class="main-nav__link">Главная</a>
@@ -29,26 +70,61 @@
 
     <footer class="page__footer footer">
       <div class="footer__content">
+        <div class="footer__logo">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="128" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 127.8 23.4" style="enable-background:new 0 0 127.8 23.4;" xml:space="preserve">
+            <style type="text/css">
+              .st0 {
+                fill: #111111;
+              }
+            </style>
+            <g>
+              <path class="st0" d="M1.6,21.5c-1-1.3-1.6-3.2-1.6-5.6V7.6c0-2.5,0.5-4.4,1.5-5.7C2.6,0.6,4.3,0,6.8,0c2.4,0,4.1,0.6,5.1,1.7     c1,1.1,1.5,2.8,1.5,4.9v2H8.5V6.3c0-0.9-0.1-1.6-0.3-2S7.6,3.5,6.8,3.5c-0.7,0-1.2,0.2-1.4,0.7S5.1,5.5,5.1,6.4v10.7     c0,0.9,0.1,1.6,0.4,2.1c0.2,0.5,0.7,0.7,1.4,0.7c0.7,0,1.1-0.2,1.3-0.7c0.2-0.5,0.3-1.2,0.3-2.1v-2.4h4.9v2c0,2.1-0.5,3.8-1.5,5     c-1,1.2-2.7,1.8-5.1,1.8C4.4,23.4,2.6,22.8,1.6,21.5z"/>
+              <path class="st0" d="M19.3,0.3h5.7l4.2,22.8h-4.6l-0.8-4.8h-3.3l-0.8,4.8H15L19.3,0.3z M23.4,15.3l-1.2-8.9L21,15.3H23.4z"/>
+              <path class="st0" d="M32.7,4.1h-3.4V0.3h11.9v3.7h-3.4v19.1h-5.1V4.1z"/>
+              <path class="st0" d="M50.3,0.3h8.8v2.4h-5.7v7.5h4.6v2.3h-4.6v8.4h5.7v2.3h-8.9V0.3z"/>
+              <path class="st0" d="M61.7,0.3h2.2l6.5,15.1V0.3h2.6v22.8h-2L64.4,7.5v15.6h-2.7V0.3z"/>
+              <path class="st0" d="M76,0.3h8.8v2.4h-5.7v7.5h4.6v2.3h-4.6v8.4h5.7v2.3H76V0.3z"/>
+              <path class="st0" d="M87.4,0.3H92c2.3,0,4,0.5,5.1,1.4c1.1,0.9,1.6,2.5,1.6,4.6c0,2.9-0.9,4.7-2.8,5.3l3.2,11.4H96l-3-10.7h-2.5     v10.7h-3.2V0.3z M91.8,10.1c1.4,0,2.3-0.3,2.9-0.8c0.6-0.5,0.9-1.5,0.9-3c0-0.9-0.1-1.7-0.3-2.2c-0.2-0.5-0.6-0.9-1.1-1.2     c-0.5-0.3-1.3-0.4-2.2-0.4h-1.4v7.5H91.8z"/>
+              <path class="st0" d="M102.7,21.4c-0.9-1.3-1.4-3.2-1.4-5.8V8c0-1.8,0.2-3.2,0.5-4.3c0.4-1.1,1-2,1.9-2.6s2.1-0.9,3.7-0.9     c2.1,0,3.6,0.5,4.5,1.6s1.4,2.7,1.4,5v0.8h-3V6.9c0-1.1-0.1-1.9-0.2-2.5c-0.1-0.6-0.4-1-0.8-1.3c-0.4-0.3-1-0.5-1.9-0.5     c-0.9,0-1.5,0.2-2,0.6s-0.7,0.9-0.8,1.6s-0.2,1.6-0.2,2.7V16c0,1.7,0.2,3,0.6,3.8c0.4,0.8,1.2,1.1,2.4,1.1c1.2,0,2-0.4,2.4-1.2     c0.4-0.8,0.7-2.1,0.7-4v-1.6h-2.9v-2.3h5.8v11.3h-2l-0.3-2.6c-0.7,1.9-2.1,2.9-4.1,2.9C105.1,23.4,103.6,22.7,102.7,21.4z"/>
+              <path class="st0" d="M119.8,15.1l-4.9-14.7h3l3.5,11l3.4-11h3l-4.9,14.7v8h-3V15.1z"/>
+            </g>
+          </svg>
+        </div>
         <ul class="social">
           <li class="social__item">
             <a href="https://vk.com/htmlacademy" class="social__link">
-              <img src="https://via.placeholder.com/150x150" class="social__image social__image-vk" width="16" height="16" alt="VK">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+                <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2  c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9  s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1  C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4c0-0.5,0.5-0.9,0.9-1.1C8.3,0.1,9.1,0,10.1,0h0.5c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5v1.6  c0,0.3,0,0.8,0.1,1c0.2-0.1,0.6-0.5,1.5-1.9c0.6-0.9,1-1.9,1.1-2.1c0.1-0.3,0.4-0.7,1.2-0.7h3.4c0.7,0,1.2,0.2,1.3,0.7  c0.2,0.5,0.1,1.3-1.7,3.5c-0.3,0.3-0.5,0.6-0.7,0.9c-0.5,0.4-0.9,1-0.9,1.1s0.5,0.5,0.9,0.9c1.1,0.9,1.9,1.7,2.2,2.3  c0.4,0.6,0.3,1,0.2,1.3c-0.3,0.7-1.2,0.7-1.4,0.8h-2.8C17.7,12,17.6,12,17.6,12z M13.7,8.3c0.7,0,1.2,0.6,1.8,1.2  c0.4,0.4,0.7,0.8,1.1,1c0.5,0.3,1,0.3,1,0.3h2.9c0.1,0,0.3-0.1,0.4-0.1c0,0,0-0.1-0.1-0.1c-0.3-0.5-1-1.3-2-2.1  c-0.9-0.7-1.3-1.1-1.4-1.7c0-0.6,0.4-1.1,1.2-2.1c0.2-0.2,0.4-0.5,0.7-0.8c1.1-1.4,1.4-2,1.5-2.3h-3.9c0,0.4-0.5,1.5-1.1,2.4  c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1V3.9V2.6c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1H10  c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4  C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1  c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z"/>
+              </svg>
             </a>
           </li>
           <li class="social__item">
             <a href="https://www.instagram.com/htmlacademy" class="social__link">
-              <img src="https://via.placeholder.com/150x150" class="social__image social__image-ig" width="16" height="16" alt="Instagram">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
+                <style type="text/css">
+                  .st0{fill:#231F20;}
+                </style>
+                <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8   M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
+                <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8  s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
+                <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
+              </svg>
             </a>
           </li>
           <li class="social__item">
             <a href="https://ru-ru.facebook.com/htmlacademy" class="social__link">
-              <img src="https://via.placeholder.com/150x150" class="social__image social__image-fb" width="16" height="16" alt="Facebook">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16" height="16" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+                <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18  h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18  z"/>
+              </svg>
             </a>
           </li>
         </ul>
         <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright">
           <span class="copyright__text">HTML Academy</span>
-          <img src="https://via.placeholder.com/150x150" class="copyright__image" width="27" height="34" alt="Academy">
+          <div class="copyright__image">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
+              <path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+            </svg>
+          </div>
         </a>
       </div>
     </footer>
