Добавляет сетку на главную страницу

--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>HTML Academy: Кэт энерджи | Главная</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -19,12 +20,12 @@
               <rect width="24" height="2"/>
             </svg>
           </button>
-          <ul class="main-nav__list visually-hidden">
+          <ul class="main-nav__list">
             <li class="main-nav__item">
               <a class="main-nav__link main-nav__link--active">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a href="catalog.html" class="main-nav__link">Каталог</a>
+              <a href="catalog.html" class="main-nav__link">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
               <a href="form.html" class="main-nav__link">Форма</a>
@@ -36,14 +37,14 @@
     <main class="page__content">
       <section class="banner">
         <div class="banner__content">
-          <h1 class="heading heading--level-1">Функциональное питание для котов</h1>
+          <h1 class="heading heading--level-1 banner__heading">Функциональное питание для котов</h1>
           <p class="banner__title">Занялся собой? Займись котом!</p>
+          <a href="form.html" class="button banner__to-form">Подобрать программу</a>
           <img class="banner__image" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Функциональное питание для котов">
         </div>
       </section>
       <section class="program">
         <div class="program__content">
-          <a href="form.html" class="button program__to-form">Подобрать программу</a>
           <ul class="program__list">
             <li class="program__item">
               <div class="program__image program__image--slim">
@@ -80,7 +81,7 @@
       </section>
       <section class="advantages">
         <div class="advantages__content">
-          <h2 class="heading heading--level-2">Как это работает</h2>
+          <h2 class="heading heading--level-2 advantages__heading">Как это работает</h2>
           <ul class="advantages__list">
             <li class="advantage">
               <img src="img/advantage-leaf@1x.png" alt="Функциональное питание" class="advantage__icon" width="60" height="60">
